--- a/VPad-App/package.json
+++ b/VPad-App/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v-pad",
+  "name": "v-pad-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,9 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "nodemon server/index.js",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev"
   },
   "dependencies": {
+    "@prisma/client": "^7.1.0",
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -23,6 +29,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "nodemon": "^3.1.11",
     "prisma": "^7.1.0",
     "vite": "^7.2.2"
   }
