PostgreSQL database linked

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=Vpad
 server.port=8080
-spring.datasource.url=jdbc:mysql://maglev.proxy.rlwy.net:56856/railway
-spring.datasource.username=root
-spring.datasource.password=arkHxbFXvdUKkkFIReWQkwwdeDKgcrqN
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/Vpad
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
