--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+        	<groupId>org.postgresql</groupId>
+        	<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+        	<version>42.5.4</version>  
+    	</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
