--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
     		<artifactId>h2</artifactId>
     		<scope>runtime</scope>
 		</dependency>
+		<!-- OpenAPI dependency for API documentation -->
+		<dependency>
+    		<groupId>org.springdoc</groupId>
+    		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    		<version>2.5.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
