--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,21 @@
-spring.application.name=Vpad
-server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost:5432/Vpad
-spring.datasource.username=postgres
-spring.datasource.password=root
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+# spring.application.name=Vpad
+# server.port=8080
+# spring.datasource.url=jdbc:postgresql://localhost:5432/Vpad
+# spring.datasource.username=postgres
+# spring.datasource.password=root
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.jpa.hibernate.ddl-auto=update
 
 # This allows the project to run with an in-memory H2 database for testing purposes.
 # Uncomment the following lines to use H2 instead of PostgreSQL.
-# spring.datasource.url=jdbc:h2:mem:testdb
-# spring.datasource.driverClassName=org.h2.Driver
-# spring.datasource.username=sa
-# spring.datasource.password=
-# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # This allows you to see the DB at http://localhost:8080/h2-console
-# spring.h2.console.enabled=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+# Ensure that JPA initializes after the datasource
+spring.jpa.defer-datasource-initialization=true
