application properties divided in separate files, it is posible to call postgre-db or h2-db whenever needed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,9 @@
-# spring.application.name=Vpad
-# server.port=8080
-# spring.datasource.url=jdbc:postgresql://localhost:5432/Vpad
-# spring.datasource.username=postgres
-# spring.datasource.password=root
-# spring.datasource.driver-class-name=org.postgresql.Driver
-# spring.jpa.hibernate.ddl-auto=update
+# This file contains the configuration properties for the Spring Boot application.
+# It includes settings for both H2 and PostgreSQL databases, allowing to switch between them by changing the active profile.
+# Comment or uncomment the relevant sections to use the desired database.
 
-# This allows the project to run with an in-memory H2 database for testing purposes.
-# Uncomment the following lines to use H2 instead of PostgreSQL.
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-# This allows you to see the DB at http://localhost:8080/h2-console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-# Ensure that JPA initializes after the datasource
-spring.jpa.defer-datasource-initialization=true
+# H2 DATABASE
+# spring.profiles.active=h2
+
+# POSTGRESQL DATABASE
+spring.profiles.active=postgres
