--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # Comment or uncomment the relevant sections to use the desired database.
 
 # H2 DATABASE
-# spring.profiles.active=h2
+spring.profiles.active=h2
 
 # POSTGRESQL DATABASE
-spring.profiles.active=postgres
+#spring.profiles.active=postgres
